finished copy writing

--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -113,7 +113,7 @@
                 <div class="col-md aboutUs-social__map-section">
                     <h3 class="aboutUs-social__map-title">Service Area</h3>
                     <p class="aboutUs-social__description">
-                        Service Areas are West Branch, Rose City and Saint Helen as long as it is 20 minutes from our location. Any services that are out of range will be an additional .50 cents per 
+                        Service Areas are West Branch, Rose City and Saint Helen as long as it is 20 miles from our location. Any services that are out of range will be an additional .50 cents per 
                         mile added on to the service. If you aren't sure if you are in our service range feel free to fill out the form and we will let you know! 
                     </p>
                     <div class="d-flex justify-content-center">
