--- a/html/contact.html
+++ b/html/contact.html
@@ -76,9 +76,9 @@
         <!-- Intro Text -->
         <div class="d-flex justify-content-center" style="margin-top: 100px;">
             <p class="contact-intro-text">
-                Feel free to give us a call with any of your qestions or wonders about. the pet sitting needs you have today.
-                I don't know what else to say so here it goes. bye. LIKE A BATEL EFRSEFH FS HFOHFEOIFH ESDBF DFB DSFHGSEOIFGH 
-                S EFHSEDSEHFSEHFSEIHFS FSEFSEFHSEFHE; F EFEGSDGRSDG  ERFEFSGRGG . GS SGS  FGS  FG SFG S  GS ERFS.S E RF
+                Let’s talk! Don’t hesitate to reach out using the information below, 
+                or send a message using our form. If you have any questions at all,
+                feel free to get in touch!
             </p>
         </div>
         <div class="d-flex justify-content-center" style="margin-top: 60px;">
