--- a/html/faq.html
+++ b/html/faq.html
@@ -96,7 +96,7 @@
               </div>
               <div id="areasServicedCollapse" class="collapse show" aria-labelledby="areasServiced" data-parent="#faqAccordian">
                 <div class="card-body">
-                    We service most of West Branch, Saint Helen and Rose City all within 20 miles of my location. We do offer services outside of our service area for a small gas fee of .50 cents per miles traveled pass 20 miles for both ways.
+                    We service most of West Branch, Saint Helen and Rose City all within 20 miles of our location. We do offer services outside of our service area for an additional gas fee of .50 cents per extra mile.
                 </div>
               </div>
             
@@ -122,7 +122,7 @@
                 </div>
                 <div id="keysCollapse" class="collapse" aria-labelledby="keys" data-parent="#faqAccordian">
                     <div class="card-body">
-                        Yes. When we meet for the meet and greet we recommend that you provide one set of house keys for us. A key code can work as well. These keys will be kept safe and secure the entire time you are away and if you would like we can keep them on file for future visits.
+                        Yes. When we meet for the Meet & Greet we recommend that you provide one set of house keys for us. A key code can work as well. These keys will be kept safe and secure the entire time you are away and if you would like we can keep them on file for future visits.
                     </div>
                 </div>
 
@@ -148,7 +148,7 @@
                 </div>
                 <div id="medicationCollapse" class="collapse" aria-labelledby="medication" data-parent="#faqAccordian">
                     <div class="card-body">
-                        Yes. As a sitter, I have experience in giving oral medication to animals a long as they are willing to take it. However, if you feel your pet may be resistant (biting, scratching) to their medication, then we suggest leaving your pet at the vet where they can ensure they get their medication.
+                        Yes. As sitters, we have experience in giving oral medication to animals as long as they are willing to take it. However, if you feel your pet may be resistant (biting, scratching) to their medication, then we suggest leaving your pet at the vet where they can ensure they get their medication.
                     </div>
                 </div>
 
@@ -161,7 +161,7 @@
                 </div>
                 <div id="multiplePetsCollapse" class="collapse" aria-labelledby="multiplePets" data-parent="#faqAccordian">
                     <div class="card-body">
-                        No. We only charge for the amount of time your sitter was taking care of your pets. We recommend for 1-2 pets, at least a 30 minute visit. For 2-3 pets, a 45 minute visit is perfect For 3-4 pets, we recommend a 60 minute visit If you have more than 4 pets that need attention contact us and we will set up your perfect plan.
+                        No. We only charge for the amount of time your sitter was taking care of your pets. We recommend for 1-2 pets, at least a 30 minute visit. For 2-3 pets, a 45 minute visit is perfect. For 3-4 pets, we recommend a 60 minute visit. If you have more than 4 pets that need attention contact us and we will set up your perfect plan.
                     </div>
                 </div>
 
@@ -174,7 +174,7 @@
                 </div>
                 <div id="multipleVisitsCollapse" class="collapse" aria-labelledby="multipleVisits" data-parent="#faqAccordian">
                     <div class="card-body">
-                        Yes You can schedule a sitter to come out up to 3 times day usually within an hour timeframe of when I will be needed for care. Of course upon availability.  If you think that you will need more contact us today to see if we can accommodate you and your pets needs.
+                        Yes, you can schedule a sitter to come out up to 3 times a day, who will provide the service within an hour of the requested time. If we are booked that day, the timing may vary and we will contact you if that happens.  If you think that you will need more than three visits, contact us today to see if we can accommodate you and your pet's needs.
                     </div>
                 </div>
 
@@ -187,7 +187,7 @@
                 </div>
                 <div id="payCollapse" class="collapse" aria-labelledby="pay" data-parent="#faqAccordian">
                     <div class="card-body">
-                        At this time we accept both cash and paypal. We kindly ask to be paid in full by the start of the service.
+                        At this time we accept both cash and PayPal. We kindly ask to be paid in full by the start of the service.
                     </div>
                 </div>
 
@@ -200,15 +200,15 @@
                 </div>
                 <div id="cancellationCollapse" class="collapse" aria-labelledby="cancellation" data-parent="#faqAccordian">
                     <div class="card-body">
-                        -Payment is due at time of service or upon completion of service.
+                        -Payment is due by the beginning of the service.
                         <br>
-                        -A full refund is availability if canceled before 72 hours of the service.
+                        -A full refund is available if cancelled before 72 hours of the service.
                         <br>
-                        -If you cancel after the 72 hours, but before the 24 hours you will receive a 50% refund for the first 4 cancelled calendar days from the cancellation request date. A 100% refund I available for any additional days.
+                        -If you cancel after 72 hours, but before 24 hours; you will receive a 50% refund for the first 4 cancelled days. A 100% refund is given for any additional cancelled days.
                         <br>
                         -Cancellations for visits within 24 hours will be charged in full. Cancellations for holiday visits within 72 hours will be charged in full.
                         <br>
-                        -Reservations are made to plan sitter availability to clients. Therefore, clients returning home early  will be required to pay for the reserved amount of time scheduled including travel time, if applicable. 
+                        -Clients returning home early will be required to pay the reserved amount of time scheduled including travel time, if applicable. 
                     </div>
                 </div>
 
@@ -221,7 +221,7 @@
                 </div>
                 <div id="sickPetCollapse" class="collapse" aria-labelledby="sickPet" data-parent="#faqAccordian">
                     <div class="card-body">
-                        We will always let you know right away if we notice any strange behavior in your pet such as not feeling well or is having a medical emergency. We will do everything in our power to keep your dog safe and healthy. If it is an emergency and we are unable to get in touch with you, we will take your pet to the vet that you have on file right away. If your pet is sick, but doesn't appear to be an emergency, we will contact you for approval on the next steps that should be taken.
+                        We will always let you know right away if we notice any strange behavior in your pet such as not feeling well or is having a medical emergency. We will do everything in our power to keep your pet safe and healthy. If it is an emergency and we are unable to get in touch with you, we will take your pet to the vet that you have on file right away. If your pet is sick, but doesn't appear to be an emergency, we will contact you for approval on the next steps that should be taken.
                     </div>
                 </div>
 
@@ -234,7 +234,13 @@
                 </div>
                 <div id="howToJoinCollapse" class="collapse" aria-labelledby="howToJoin" data-parent="#faqAccordian">
                     <div class="card-body">
-                        Head to the <a href="letsmeet.html">Let's Meet</a> page and fill out the form on the page and we will get back to you as soon as we can. We would like you to answer a few general questions in order to get to know you and your pets. We always recommend for you to fill it out before the meet and greet, that gives your sitter more quality time to spend with your pets to insure a good fit. You can find the client packet a long with the contract forms to fill out before your meet and greet on the <a href="letsmeet.html"> Let's Meet</a> page . We then typically set up an in-person orientation, in which we meet you at you home to discuss your pets care routine. This brief "meet and greet" allow us to make sure all details are discussed prior to starting service for the first time.
+                        Head to the <a href="letsmeet.html">Let's Meet</a> page and fill out the form; we will get back to you as soon as we can!
+                        We would like you to answer a few general questions in order to get to know you and your pets. We always recommend for you to 
+                        fill it out before the Meet & Greet, that gives your sitter more quality time to spend with your pets to ensure a good fit. You 
+                        can find the client packet along with the contract forms to fill out before your Meet and Greet on the 
+                        <a href="letsmeet.html"> Let's Meet</a> page . We then typically set up an in-person orientation, in which we meet you at your home
+                         to discuss your pet's care routine. This brief Meet and Greet allows us to make sure all details are discussed prior to starting 
+                         service for the first time!
                     </div>
                 </div>
             </div>
