--- a/html/gallery.html
+++ b/html/gallery.html
@@ -162,8 +162,8 @@
                     <img src="../img/Gallery/8_Luke.jpg" class="gallery__img-img" alt="Male Retriever looking at the carmera."/>
                     <div class="gallery__img-overlay" id="gallery__img-overlay-8">
                         <h3>Luke</h3>
-                        <p>This is Teko! Teko is one of six dogs in his family.  All of their high energy helps keep him young!</p>
-                        <small>See why Teko loves our visits, set up a Meet & Greet now!</small>
+                        <p>Luke can't get enough attention!  He loves his pets.</p>
+                        <small>See why Luke loves our visits, set up a Meet & Greet now!</small>
                         <a href="letsmeet.html" class="bttn-float bttn-lg bttn-jumbo overlay-bttn">Let's Meet!</a>
                     </div>
                 </div>
@@ -171,8 +171,8 @@
                     <img src="../img/Gallery/9_Little-Bear.jpg" class="gallery__img-img" alt="Older female dog smiling for the camera."/>
                     <div class="gallery__img-overlay" id="gallery__img-overlay-9">
                         <h3>Little Bear</h3>
-                        <p>This is Mia! She loves belly rubs, she could soak up the love all day!</p>
-                        <small>See why Mia loves our visits, set up a Meet & Greet now!</small>
+                        <p>This is Little Bear! He is a big cuddler; his favorite place is napping on your neck!</p>
+                        <small>See why Little Bear loves our visits, set up a Meet & Greet now!</small>
                         <a href="letsmeet.html" class="bttn-float bttn-lg bttn-jumbo overlay-bttn">Let's Meet!</a>
                     </div>
                 </div>
@@ -185,8 +185,8 @@
                     <img src="../img/Gallery/10_Mia.jpg" class="gallery__img-img" alt="Small female dog on her side."/>
                     <div class="gallery__img-overlay" id="gallery__img-overlay-10">
                         <h3>Mia</h3>
-                        <p>This is Lucy! Lucy loves to go for walks out in the woods.</p>
-                        <small>See why Lucy loves our walks, set up a Meet & Greet now!</small>
+                        <p>This is Mia! She loves belly rubs, she could soak up the love all day!</p>
+                        <small>See why Mia loves our visits, set up a Meet & Greet now!</small>
                         <a href="letsmeet.html" class="bttn-float bttn-lg bttn-jumbo overlay-bttn">Let's Meet!</a>
                     </div>
                 </div>
@@ -194,8 +194,8 @@
                     <img src="../img/Gallery/11_Cody.jpg" class="gallery__img-img" alt="Male Golden-Doodle in the store."/>
                     <div class="gallery__img-overlay" id="gallery__img-overlay-11">
                         <h3>Cody</h3>
-                        <p>This is Teko! Teko is one of six dogs in his family.  All of their high energy helps keep him young!</p>
-                        <small>See why Teko loves our visits, set up a Meet & Greet now!</small>
+                        <p>This is Cody! He is a sweet heart. He loves our socialization training!</p>
+                        <small>See why Cody loves our training, set up a Meet & Greet now!</small>
                         <a href="letsmeet.html" class="bttn-float bttn-lg bttn-jumbo overlay-bttn">Let's Meet!</a>
                     </div>
                 </div>
@@ -203,8 +203,8 @@
                     <img src="../img/Gallery/12_Fritzy -and-Baby-Bear.jpg" class="gallery__img-img" alt="Two small dogs outside in the snow"/>
                     <div class="gallery__img-overlay" id="gallery__img-overlay-12">
                         <h3>Fritzy & Baby Bear</h3>
-                        <p>This is Mia! She loves belly rubs, she could soak up the love all day!</p>
-                        <small>See why Mia loves our visits, set up a Meet & Greet now!</small>
+                        <p>These two are always so high energy, it's infectious!</p>
+                        <small>See why they love our walks, set up a Meet & Greet now!</small>
                         <a href="letsmeet.html" class="bttn-float bttn-lg bttn-jumbo overlay-bttn">Let's Meet!</a>
                     </div>
                 </div>
@@ -217,8 +217,8 @@
                 <img src="../img/Gallery/13_Gus-and-Cody.jpg" class="gallery__img-img" alt="Two poodles standing outside their house."/>
                 <div class="gallery__img-overlay" id="gallery__img-overlay-13">
                     <h3>Gus & Cody</h3>
-                    <p>This is Lucy! Lucy loves to go for walks out in the woods.</p>
-                    <small>See why Lucy loves our walks, set up a Meet & Greet now!</small>
+                    <p>Gus and Cody are best friends, they do everything together!</p>
+                    <small>See why they love our training, set up a Meet & Greet now!</small>
                     <a href="letsmeet.html" class="bttn-float bttn-lg bttn-jumbo overlay-bttn">Let's Meet!</a>
                 </div>
             </div>
@@ -226,8 +226,8 @@
                 <img src="../img/Gallery/14_Willy.jpg" class="gallery__img-img" alt="Male Chihuahua mix sitting outside."/>
                 <div class="gallery__img-overlay" id="gallery__img-overlay-14">
                     <h3>Willy</h3>
-                    <p style="margin-top: 20px;">This is Teko! Teko is one of six dogs in his family.  All of their high energy helps keep him young!</p>
-                    <small>See why Teko loves our visits, set up a Meet & Greet now!</small>
+                    <p style="margin-top: 20px;">Willy always greets us with so much energy!</p>
+                    <small>See why Willy loves our visits, set up a Meet & Greet now!</small>
                     <a href="letsmeet.html" class="bttn-float bttn-lg bttn-jumbo overlay-bttn">Let's Meet!</a>
                 </div>
             </div>
@@ -235,8 +235,8 @@
                 <img src="../img/Gallery/15_Boop.jpg" class="gallery__img-img" alt="Male Shih Tzu mix dog."/>
                 <div class="gallery__img-overlay" id="gallery__img-overlay-15">
                     <h3>Boop</h3>
-                    <p>This is Mia! She loves belly rubs, she could soak up the love all day!</p>
-                    <small>See why Mia loves our visits, set up a Meet & Greet now!</small>
+                    <p>Boop is always so playful, we can't leave without throwing the ball just one more time!</p>
+                    <small>See why Boop loves our visits, set up a Meet & Greet now!</small>
                     <a href="letsmeet.html" class="bttn-float bttn-lg bttn-jumbo overlay-bttn">Let's Meet!</a>
                 </div>
             </div>
@@ -249,8 +249,8 @@
                 <img src="../img/Gallery/16_Sassy.jpg" class="gallery__img-img" alt="Old female dog standing outside in the snow."/>
                 <div class="gallery__img-overlay" id="gallery__img-overlay-16">
                     <h3>Sassy</h3>
-                    <p>This is Lucy! Lucy loves to go for walks out in the woods.</p>
-                    <small>See why Lucy loves our walks, set up a Meet & Greet now!</small>
+                    <p>This is Sassy! Sassy can be timid, but she soaks up the love.</p>
+                    <small>See why Sassy loves our visits, set up a Meet & Greet now!</small>
                     <a href="letsmeet.html" class="bttn-float bttn-lg bttn-jumbo overlay-bttn">Let's Meet!</a>
                 </div>
             </div>
@@ -258,7 +258,7 @@
                 <img src="../img/Gallery/17_Beagle.jpg" class="gallery__img-img" alt="Male Beagle looking at the camera."/>
                 <div class="gallery__img-overlay" id="gallery__img-overlay-17">
                     <h3>Charlie</h3>
-                    <p style="margin-top: 20px;">This is Teko! Teko is one of six dogs in his family.  All of their high energy helps keep him young!</p>
+                    <p style="margin-top: 20px;">This is Charlie! Charlie is so much fun, we could play fetch forever.</p>
                     <small>See why Teko loves our visits, set up a Meet & Greet now!</small>
                     <a href="letsmeet.html" class="bttn-float bttn-lg bttn-jumbo overlay-bttn">Let's Meet!</a>
                 </div>
@@ -267,8 +267,8 @@
                 <img src="../img/Gallery/18_Porkie.jpg" class="gallery__img-img" alt="Female pet pig in her backyard."/>
                 <div class="gallery__img-overlay" id="gallery__img-overlay-18">
                     <h3>Porkie</h3>
-                    <p>This is Mia! She loves belly rubs, she could soak up the love all day!</p>
-                    <small>See why Mia loves our visits, set up a Meet & Greet now!</small>
+                    <p>This is Porkie! She is super smart and extremely sassy!</p>
+                    <small>See why Porkie loves our visits, set up a Meet & Greet now!</small>
                     <a href="letsmeet.html" class="bttn-float bttn-lg bttn-jumbo overlay-bttn">Let's Meet!</a>
                 </div>
             </div>
@@ -281,8 +281,8 @@
                 <img src="../img/Gallery/19_Samson-Fritzy-and-Baby-Bear.jpg" class="gallery__img-img" alt="Great Pyrenees and Pomeranian going for a walk."/>
                 <div class="gallery__img-overlay" id="gallery__img-overlay-19">
                     <h3>Samson & Baby Bear</h3>
-                    <p>This is Lucy! Lucy loves to go for walks out in the woods.</p>
-                    <small>See why Lucy loves our walks, set up a Meet & Greet now!</small>
+                    <p>Samson and Baby Bear look forward to our walks; they can't get enough and neither can we!</p>
+                    <small>See why they love their walks, set up a Meet & Greet now!</small>
                     <a href="letsmeet.html" class="bttn-float bttn-lg bttn-jumbo overlay-bttn">Let's Meet!</a>
                 </div>
             </div>
@@ -290,8 +290,8 @@
                 <img src="../img/Gallery/20_Lucy-woods.jpg" class="gallery__img-img" alt="Female collie sitting in the woods."/>
                 <div class="gallery__img-overlay" id="gallery__img-overlay-20">
                     <h3>Lucy</h3>
-                    <p style="margin-top: 20px;">This is Teko! Teko is one of six dogs in his family.  All of their high energy helps keep him young!</p>
-                    <small>See why Teko loves our visits, set up a Meet & Greet now!</small>
+                    <p style="margin-top: 20px;">Lucy loves our walks through the woods.</p>
+                    <small>See why Lucy loves our walks, set up a Meet & Greet now!</small>
                     <a href="letsmeet.html" class="bttn-float bttn-lg bttn-jumbo overlay-bttn">Let's Meet!</a>
                 </div>
             </div>
@@ -299,8 +299,8 @@
                 <img src="../img/Gallery/21_Scotty.jpg" class="gallery__img-img" alt="Old male dog looking at the camera."/>
                 <div class="gallery__img-overlay" id="gallery__img-overlay-21">
                     <h3>Scotty</h3>
-                    <p>This is Mia! She loves belly rubs, she could soak up the love all day!</p>
-                    <small>See why Mia loves our visits, set up a Meet & Greet now!</small>
+                    <p>Scotty has so much energy, he loves to jump up really high!</p>
+                    <small>See why Scotty loves our visits, set up a Meet & Greet now!</small>
                     <a href="letsmeet.html" class="bttn-float bttn-lg bttn-jumbo overlay-bttn">Let's Meet!</a>
                 </div>
             </div>
@@ -313,8 +313,8 @@
                 <img src="../img/Gallery/22_CLyde.jpg" class="gallery__img-img" alt="Young black cat sitting with wide eyes."/>
                 <div class="gallery__img-overlay" id="gallery__img-overlay-22">
                     <h3>Clyde</h3>
-                    <p>This is Lucy! Lucy loves to go for walks out in the woods.</p>
-                    <small>See why Lucy loves our walks, set up a Meet & Greet now!</small>
+                    <p>This is Clyde. He's a friendly kitten who loves playing.</p>
+                    <small>See why Clyde loves our visits, set up a Meet & Greet now!</small>
                     <a href="letsmeet.html" class="bttn-float bttn-lg bttn-jumbo overlay-bttn">Let's Meet!</a>
                 </div>
             </div>
@@ -322,8 +322,8 @@
                 <img src="../img/Gallery/23_Bella-bed.jpg" class="gallery__img-img" alt="Old female dog sitting in her pet bed."/>
                 <div class="gallery__img-overlay" id="gallery__img-overlay-23">
                     <h3>Bella</h3>
-                    <p style="margin-top: 20px;">This is Teko! Teko is one of six dogs in his family.  All of their high energy helps keep him young!</p>
-                    <small>See why Teko loves our visits, set up a Meet & Greet now!</small>
+                    <p style="margin-top: 20px;">Bella loves playing tug-of-war with her siblings. </p>
+                    <small>See why Bella loves our visits, set up a Meet & Greet now!</small>
                     <a href="letsmeet.html" class="bttn-float bttn-lg bttn-jumbo overlay-bttn">Let's Meet!</a>
                 </div>
             </div>
@@ -331,8 +331,8 @@
                 <img src="../img/Gallery/24_Cookie-and-Little-Bear.jpg" class="gallery__img-img" alt="Two female dogs, one of them is wearing a sweater."/>
                 <div class="gallery__img-overlay" id="gallery__img-overlay-24">
                     <h3>Cookie & Little Bear</h3>
-                    <p>This is Mia! She loves belly rubs, she could soak up the love all day!</p>
-                    <small>See why Mia loves our visits, set up a Meet & Greet now!</small>
+                    <p>These two love to show affection; Cookie loves giving kisses!</p>
+                    <small>See why they love our visits, set up a Meet & Greet now!</small>
                     <a href="letsmeet.html" class="bttn-float bttn-lg bttn-jumbo overlay-bttn">Let's Meet!</a>
                 </div>
             </div>
@@ -345,8 +345,8 @@
                 <img src="../img/Gallery/25_Mandie.jpg" class="gallery__img-img" alt="Beautiful pure-bred Papillon staring majestically into the distance."/>
                 <div class="gallery__img-overlay" id="gallery__img-overlay-25">
                     <h3>Mandie</h3>
-                    <p>This is Lucy! Lucy loves to go for walks out in the woods.</p>
-                    <small>See why Lucy loves our walks, set up a Meet & Greet now!</small>
+                    <p>This is Mandie! She has so much energy; she loves chasing her ball and going for long walks. </p>
+                    <small>See why Mandie loves our walks, set up a Meet & Greet now!</small>
                     <a href="letsmeet.html" class="bttn-float bttn-lg bttn-jumbo overlay-bttn">Let's Meet!</a>
                 </div>
             </div>
@@ -354,8 +354,9 @@
                 <img src="../img/Gallery/26_Luke-and-Sophie.jpg" class="gallery__img-img" alt="Two white, mid-size dogs getting ready for a walk."/>
                 <div class="gallery__img-overlay" id="gallery__img-overlay-26">
                     <h3>Luke & Sophie</h3>
-                    <p style="margin-top: 20px;">This is Teko! Teko is one of six dogs in his family.  All of their high energy helps keep him young!</p>
-                    <small>See why Teko loves our visits, set up a Meet & Greet now!</small>
+                    <p style="margin-top: 20px;">Luke is friendly and loves to cuddle when he gets to know you.  Sophie is very friendly and loves 
+                    to chase chipmunks with her brother!</p>
+                    <small>See why they love our visits, set up a Meet & Greet now!</small>
                     <a href="letsmeet.html" class="bttn-float bttn-lg bttn-jumbo overlay-bttn">Let's Meet!</a>
                 </div>
             </div>
@@ -363,8 +364,8 @@
                 <img src="../img/Gallery/27_Tucker.jpg" class="gallery__img-img" alt="Small old dog in the snow."/>
                 <div class="gallery__img-overlay" id="gallery__img-overlay-27">
                     <h3>Tucker</h3>
-                    <p>This is Mia! She loves belly rubs, she could soak up the love all day!</p>
-                    <small>See why Mia loves our visits, set up a Meet & Greet now!</small>
+                    <p>This is Tucker. Tucker can be feisty some times, but his heart is so full of love!</p>
+                    <small>See why Tucker loves our visits, set up a Meet & Greet now!</small>
                     <a href="letsmeet.html" class="bttn-float bttn-lg bttn-jumbo overlay-bttn">Let's Meet!</a>
                 </div>
             </div>
@@ -377,8 +378,8 @@
                 <img src="../img/Gallery/28_Maverick.jpg" class="gallery__img-img" alt="Black and white dog standing on a dirt road.    "/>
                 <div class="gallery__img-overlay" id="gallery__img-overlay-28">
                     <h3>Maverick</h3>
-                    <p>This is Lucy! Lucy loves to go for walks out in the woods.</p>
-                    <small>See why Lucy loves our walks, set up a Meet & Greet now!</small>
+                    <p>This is Maverick.  He has so much energy! He gets so much energy out on our walks.</p>
+                    <small>See why Maverick loves our walks, set up a Meet & Greet now!</small>
                     <a href="letsmeet.html" class="bttn-float bttn-lg bttn-jumbo overlay-bttn">Let's Meet!</a>
                 </div>
             </div>
@@ -386,12 +387,12 @@
                 <img src="../img/Gallery/29_Velvet.jpg" class="gallery__img-img" alt="Small female dog running in a field with a red ball."/>
                 <div class="gallery__img-overlay" id="gallery__img-overlay-29">
                     <h3>Velvet</h3>
-                    <p style="margin-top: 20px;">This is Teko! Teko is one of six dogs in his family.  All of their high energy helps keep him young!</p>
-                    <small>See why Teko loves our visits, set up a Meet & Greet now!</small>
+                    <p style="margin-top: 20px;">This is Velvet. She could chase her ball for hours, and sometimes she does!</p>
+                    <small>See why Velvet loves our visits, set up a Meet & Greet now!</small>
                     <a href="letsmeet.html" class="bttn-float bttn-lg bttn-jumbo overlay-bttn">Let's Meet!</a>
                 </div>
             </div>
-            <div class="col-md">
+            <div class="col-md empty-col">
                 <!--EMPTY ON PURPOSE-->
             </div>
         </div>
@@ -403,8 +404,8 @@
                 <img src="../img/Gallery/31_Ducks.jpg" class="gallery__img-img" alt="A couple of ducks playing in a pond."/>
                 <div class="gallery__img-overlay" id="gallery__img-overlay-31">
                     <h3>Ducks</h3>
-                    <p>This is Lucy! Lucy loves to go for walks out in the woods.</p>
-                    <small>See why Lucy loves our walks, set up a Meet & Greet now!</small>
+                    <p>These are the ducks! They love swimming around and doing duck things. </p>
+                    <small>See why they love our visits, set up a Meet & Greet now!</small>
                     <br>
                     <a href="letsmeet.html" class="bttn-float bttn-lg bttn-jumbo overlay-bttn">Let's Meet!</a>
                 </div>
