--- a/html/letsmeet.html
+++ b/html/letsmeet.html
@@ -86,11 +86,7 @@
             <div class="schedule-form__title row d-flex justify-content-center">
                 <h2 class="card-title contact-title font-weight-light">Is your friend <span style="font-family: 'Courgette', cursive; color: var(--mainBlue);" class="font-weight-bold">ready to join</span> the Happy Tales Pack?</h2>
             </div>
-            <div class="schedule-form__subtitle d-flex justify-content-center">
-                <p class="schedule-form__subtitle-p">
-                    Our happy clients come in many shapes, sizes and colors.  Let Happy Tales make you and your fur babies happy; we're certain you won't regret it!
-                </p>
-            </div>
+            
             <div class="row schedule-form__row">
                 <div class="col-md schedule-form__form-column">
                     <div class="d-flex justify-content-center schedule-form__form-column-title">
@@ -163,7 +159,7 @@
                     </div>
                     <div class="d-flex justify-content-center schedule-form__download-docs-column__text">
                         <p class="schedule-form__download-docs-column-p">
-                            The meet and greet will be with Ashley, you and your fur family. Usually the meeting will last for about 30 minutes. 
+                            The Meet & Greet will be with Ashley, you and your fur family. Usually the meeting will last for about 30 minutes. 
                             We like to get some one-on-one time with your pets in order to make sure they are comfortable with us. Next, we will go through your pet's daily routine; 
                             where their food is, their water, leashes and treats. If your pet goes outside, we like to walk around the yard and go over their outside rules and what 
                             they like to do outside.
