--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
               <h3>In-Home Care</h3>
               <div class="styled-br"></div>
               <p>
-                It's been proven that in-home pet care is the most beneficial for your pets. Why take them to a boarding place when they can be taken care 
+                It's been proven that in-home pet care is the most beneficial for your pets. Why take them to a boarder when they can be taken care 
                 of from the comfort of their own home? 
               </p>
             </div>
@@ -276,8 +276,8 @@
               <h3>Happier, Healthier Pets</h3>
               <div class="styled-br"></div>
               <p>
-                Your pets will love everything about our time together!  From our human-grade treats to our insanely pet-centric services, your pets
-                will love everything about being a part of the Happy Tales Pack. 
+                Your pets will love everything about our time together. From our human-grade treats to our insanely pet-centric services, your pets
+                will keep begging for more! 
               </p>
             </div>
             <div class="col-md">
